--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,10 +1,13 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-white: #fff;
+  --vt-c-black: black;
+  --vt-c-white: white;
+  --vt-c-green-dark: #132a13;
 
   /* semantic color variables for this project */
 
-  --color-background: var(--vt-c-white);
+  --color-background: var(--vt-c-black);
+  --color-text: var(--vt-c-white);
   --section-gap: 160px;
 }
 
@@ -19,7 +22,11 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+
+  /* resulting css */
+
+  filter: contrast(100%) brightness(100%);
+  background: linear-gradient(192deg, #6a994e, #000);
   transition:
     color 0.5s,
     background-color 0.5s;
