--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,13 +3,25 @@
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   font-weight: normal;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
 }
 
-@media (width >= 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
+.focus {
+  filter: opacity(0.4);
+  scale: 0.9;
+}
+
+.focusable {
+  transition: filter 0.3s;
+}
+
+body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
