--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,6 +10,10 @@
   height: 100%;
 }
 
+.alert {
+  color: var(--vt-c-dark-red);
+}
+
 .focus {
   filter: opacity(0.4);
   scale: 0.9;
@@ -34,4 +38,12 @@ body {
 .dark {
   color: var(--color-text-dark);
   background: linear-gradient(180deg, #1f2b18, #000);
+}
+
+.dark .leaflet-layer,
+.dark .leaflet-control-zoom-in,
+.dark .leaflet-control-zoom-out,
+.dark .leaflet-control-zoom-fullscreen,
+.dark .leaflet-control-attribution {
+  filter: invert(100%) hue-rotate(180deg) brightness(95%);
 }
