--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -79,3 +79,24 @@ body {
 .dark .leaflet-control-attribution {
   filter: invert(100%) hue-rotate(180deg) brightness(95%);
 }
+
+.btn {
+  width: 100%;
+  height: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
+
+.extra-margin {
+  margin-top: 2rem;
+}
+
+.btn-dark {
+  background-color: var(--vt-c-orange);
+}
+
+.btn-light {
+  background-color: var(--vt-c-yellow);
+}
