--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -26,9 +26,11 @@
     position: fixed;
     z-index: 1;
     bottom: 0;
+    max-width: var(--max-content-width);
   }
 
   & main {
+    max-width: var(--max-content-width);
     overflow-y: auto;
     position: absolute;
     display: flex;
@@ -48,11 +50,10 @@
 
 .focus {
   filter: opacity(0.4);
-  scale: 0.9;
 }
 
 .focusable {
-  transition: filter 0.3s;
+  transition: filter 0.2s;
 }
 
 body {
@@ -70,6 +71,16 @@ body {
 .dark {
   color: var(--color-text-dark);
   background: linear-gradient(180deg, #1f2b18, #000);
+}
+
+.side-bar-light {
+  color: var(--color-text-light);
+  background-color: var(--vt-c-white);
+}
+
+.side-bar-dark {
+  color: var(--color-text-dark);
+  background-color: var(--vt-c-black);
 }
 
 .dark .leaflet-layer,
@@ -99,4 +110,39 @@ body {
 
 .btn-light {
   background-color: var(--vt-c-yellow);
+}
+
+.error-message {
+  position: absolute;
+  top: 0;
+  color: #d8000c;
+  background-color: #ffd2d2;
+  padding: 10px 20px;
+  margin: var(--main-padding);
+  border-radius: 5px;
+  text-align: center;
+  z-index: 5;
+  margin-left: 85px;
+}
+
+.main-login {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-desktop {
+  height: 100vh;
+}
+
+.main-error {
+  margin-top: 70px;
+}
+
+.body-margin {
+  margin-left: 85px;
 }
